--- a/src/components/tag/tag.css
+++ b/src/components/tag/tag.css
@@ -3,14 +3,15 @@
   flex-grow: 0;
   background-color: var(--navy300);
   color: var(--navy600);
-  font-size: 12px;
+  font-size: 1.2rem;
   font-weight: 500;
-  padding: 4px 16px;
+  line-height: 1.6rem;
+  padding: 0.4rem 1.6rem;
   border-radius: 3px;
 }
 
 .ui-tag__inner {
-  max-width: 100px;
+  max-width: 10rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -29,12 +30,12 @@
 
 .ui-tag--avatar {
   border-radius: 100px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
 }
 
 .ui-tag--avatar .ui-avatar {
-  margin-right: 8px;
+  margin-right: 0.8rem;
 }
 
 .ui-tag__remove {
@@ -44,7 +45,7 @@
   height: 16px;
   text-align: center;
   padding: 0;
-  margin-left: 8px;
+  margin-left: 0.8rem;
   cursor: pointer;
   border-radius: 50%;
   border: 1px solid transparent;
