--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -13,6 +13,11 @@
   &:focus {
     outline: 0;
   }
+
+  &:not(.ui-btn--lone-icon) > svg {
+    margin-left: -8px;
+    margin-right: 8px;
+  }
 }
 
 .ui-btn--lone-icon {
