Use darker grey for input focus states

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -34,7 +34,7 @@
   }
 
   &:not(:read-only):not(:disabled):focus {
-    border: 1px solid var(--blue500);
+    border: 1px solid var(--grey600);
   }
 }
 
