--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -22,7 +22,7 @@
 
   &:focus {
     outline: 0;
-    border: 1px solid var(--blue500);
+    border: 1px solid var(--grey600);
   }
 
   @media screen and (min-width: 768px) {
