Allow the pink gradient to be passed down to an icon

--- a/src/styles/kalo-ui-fills.css
+++ b/src/styles/kalo-ui-fills.css
@@ -221,3 +221,8 @@
 .fill-light-grey {
   fill: var(--grey500);
 }
+
+/* Special gradient filles */
+.fill-gradient-pink {
+  fill: url(#gradient-pink);
+}
