Fix styling of link buttons

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -7,10 +7,16 @@
   font-weight: 500;
   display: flex;
   align-items: center;
+  justify-content: center;
   vertical-align: middle;
   transition: background 0.3s ease-out, color 0.2s ease-out;
   background-color: var(--white);
   color: var(--navy700);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 
   &:focus {
     outline: 0;
