Append px to input border radiud token

--- a/src/design-tokens/tokens.scss
+++ b/src/design-tokens/tokens.scss
@@ -131,7 +131,7 @@ $table-default-border: 1px solid #EDF1F5;
 $input-default-background: rgb(255, 255, 255);
 $input-placeholder-color: rgb(171, 180, 187);
 $input-hover-border: 1px solid #abb4bb;
-$input-border-radius: 4;
+$input-border-radius: 4px;
 $input-active-border: 1px solid #98a0a7;
 $input-default-color: rgb(44, 46, 80);
 $input-readonly-border: 1px dashed #dde1e4;
