--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -8,7 +8,7 @@
   align-items: flex-end;
   justify-content: flex-start;
   margin: 0 auto;
-  padding: var(--spacing-small) var(--spacing-medium) 0;
+  padding: var(--spacing-small) var(--spacing-medium) 0 0;
   border-bottom: 1px solid var(--grey100);
   width: 100%;
   height: 4.2rem;
