--- a/src/components/feature-callout-card/feature-callout-card.css
+++ b/src/components/feature-callout-card/feature-callout-card.css
@@ -26,7 +26,7 @@
   font-size: 1.4rem;
   font-weight: 600;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-shrink: 0;
 
   @media screen and (min-width: 768px) {
