--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -4,39 +4,77 @@
   position: relative;
   margin: 0;
   padding: 0;
+  z-index: 2;
+}
+
+.ui-avatar:after {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  content: attr(data-fallback-initials);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  font-weight: 500;
+  z-index: 0;
 }
 
 .ui-avatar__avatar {
-  position: absolute;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  z-index: 1;
 }
 
 .ui-avatar--small {
   width: 25px;
   height: 25px;
+  font-size: 1.4rem;
 }
 
 .ui-avatar--medium {
   width: 32px;
   height: 32px;
+  font-size: 1.2rem;
 }
 
 .ui-avatar--large {
   width: 60px;
   height: 60px;
+  font-size: 2rem;
 }
 
 .ui-avatar--extra-large {
   width: 90px;
   height: 90px;
+  font-size: 3rem;
 }
 
 .ui-avatar--extra-extra-large {
   width: 130px;
   height: 130px;
+}
+
+.ui-avatar--fallback-orange:after {
+  background-color: var(--orange500);
+}
+
+.ui-avatar--fallback-pink:after {
+  background-color: var(--pink500);
+}
+
+.ui-avatar--fallback-green:after {
+  background-color: var(--green500);
+}
+
+.ui-avatar--fallback-blue:after {
+  background-color: var(--blue500);
 }
