Add navy fallback and add example of resourceHash

--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -78,3 +78,7 @@
 .ui-avatar--fallback-blue:after {
   background-color: var(--blue500);
 }
+
+.ui-avatar--fallback-navy:after {
+  background-color: var(--navy900);
+}
