--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -98,26 +98,26 @@
   border: 3px solid var(--white);
 }
 
-.ui-avatar--grouped .ui-avatar:nth-of-type(1) {
+.ui-avatar--grouped:nth-of-type(1) {
   z-index: 5;
 }
 
-.ui-avatar--grouped .ui-avatar:nth-of-type(2) {
+.ui-avatar--grouped:nth-of-type(2) {
   z-index: 4;
 }
 
-.ui-avatar--grouped .ui-avatar:nth-of-type(3) {
+.ui-avatar--grouped:nth-of-type(3) {
   z-index: 3;
 }
 
-.ui-avatar--grouped .ui-avatar:nth-of-type(4) {
+.ui-avatar--grouped:nth-of-type(4) {
   z-index: 2;
 }
 
-.ui-avatar--grouped .ui-avatar:nth-of-type(5) {
+.ui-avatar--grouped:nth-of-type(5) {
   z-index: 1;
 }
 
-.ui-avatar--grouped .ui-avatar:first-of-type {
+.ui-avatar--grouped:first-of-type {
   margin-left: 0;
 }
