--- a/src/components/lozenge/lozenge.css
+++ b/src/components/lozenge/lozenge.css
@@ -1,44 +1,39 @@
 .ui-lozenge {
   display: inline-block;
   border-radius: 3px;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  font-weight: 600;
   padding: 0.4rem 0.8rem;
   max-width: 180px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-transform: uppercase;
   height: 2.4rem;
   line-height: 1.6rem;
   flex-grow: 0;
 }
 
 .ui-lozenge--variant-red {
-  background-color: var(--pink000);
-  color: var(--pink700);
+  color: var(--pink600);
 }
 
 .ui-lozenge--variant-green {
-  background-color: var(--green000);
   color: var(--green700);
 }
 
 .ui-lozenge--variant-purple {
-  background-color: var(--purple000);
   color: var(--purple700);
 }
 
 .ui-lozenge--variant-orange {
-  background-color: var(--orange000);
   color: var(--orange700);
 }
 
 .ui-lozenge--variant-blue {
-  background-color: var(--blue000);
   color: var(--blue700);
 }
 
 .ui-lozenge--variant-grey {
-  background-color: var(--grey000);
   color: var(--grey700);
-  border: 1px solid var(--grey200);
 }
