Re-generate design tokens

--- a/src/design-tokens/kalo-ui-fills.css
+++ b/src/design-tokens/kalo-ui-fills.css
@@ -268,4 +268,7 @@
     .fill-gradient-purple {
       fill: url(#gradient-purple);
     }
+    .fill-gradient-blue-two {
+      fill: url(#gradient-blue-two);
+    }
   
