--- a/src/components/avatar-group/avatar-group.css
+++ b/src/components/avatar-group/avatar-group.css
@@ -23,3 +23,42 @@
   justify-content: center;
   margin-left: -0.7em;
 }
+
+.ui-avatar-group .ui-avatar {
+  margin-left: -0.45em;
+  box-shadow: 0 0 0 2px var(--white);
+}
+
+.ui-avatar-group .ui-avatar.ui-avatar--large,
+.ui-avatar-group .ui-avatar.ui-avatar--extra-large {
+  box-shadow: 0 0 0 3px var(--white);
+}
+
+.ui-avatar-group .ui-avatar.ui-avatar--large,
+.ui-avatar-group .ui-avatar.ui-avatar--extra-large {
+  border: 3px solid var(--white);
+}
+
+.ui-avatar-group .ui-avatar:nth-of-type(1) {
+  z-index: 5;
+}
+
+.ui-avatar-group .ui-avatar:nth-of-type(2) {
+  z-index: 4;
+}
+
+.ui-avatar-group .ui-avatar:nth-of-type(3) {
+  z-index: 3;
+}
+
+.ui-avatar-group .ui-avatar:nth-of-type(4) {
+  z-index: 2;
+}
+
+.ui-avatar-group .ui-avatar:nth-of-type(5) {
+  z-index: 1;
+}
+
+.ui-avatar-group .ui-avatar:first-of-type {
+  margin-left: 0;
+}
