Allow the button to be forced to an active state

--- a/src/components/seamless-button/seamless-button.css
+++ b/src/components/seamless-button/seamless-button.css
@@ -6,7 +6,8 @@
   cursor: pointer;
 }
 
-.ui-seamless-button:hover {
+.ui-seamless-button:hover,
+.ui-seamless-button--active {
   background-color: var(--grey100);
 }
 
