Flex align button contents

--- a/src/components/seamless-button/seamless-button.css
+++ b/src/components/seamless-button/seamless-button.css
@@ -1,4 +1,7 @@
 .ui-seamless-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: none;
   border: 0;
   padding: 0;
