--- a/src/components/service-tag/service-tag.css
+++ b/src/components/service-tag/service-tag.css
@@ -1,8 +1,8 @@
 .ui-service-tag {
   display: inline-flex;
   background-color: var(--white);
-  border: 1px solid var(--grey400);
-  color: var(--navy800);
+  border: 1px solid var(--navy500);
+  color: var(--navy600);
   font-size: 1.2rem;
   font-weight: 400;
   line-height: 1.6rem;
