--- a/src/design-tokens/kalo-ui-colors.css
+++ b/src/design-tokens/kalo-ui-colors.css
@@ -86,6 +86,9 @@
         .color-green300 {
           color: var(--green300);
         }
+        .color-coral {
+          color: var(--coral);
+        }
         .color-red {
           color: var(--red);
         }
