--- a/src/design-tokens/tokens.scss
+++ b/src/design-tokens/tokens.scss
@@ -28,6 +28,7 @@ $green100: #d0f3e7;
 $orange: #fdb61c;
 $green200: #b5ecd9;
 $green300: #98e4ca;
+$coral: #f07a7a;
 $red: #ee467e;
 $grey000: #f9fafc;
 $green400: #76dcb8;
